[metadata]
name = lat-long
version = 0.1
description = Parsing Latitude and Longtitude coordinates.
long_description = file: README.md
url = https://github.com/oscarychen/lat-long
author = Oscar Chen
author_email = quacky@duck.com
license = BSD-3-Clause
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
# install_requires
    